--- a/events.html
+++ b/events.html
@@ -49,7 +49,7 @@
 					<img src="img/miawuk.png" alt="">
 				</a>
 				<ul class="main-menu">
-					<li><a href="./miawu-profile.html">Miawu Profile</a></li>
+					<li><a href="./index.html">Miawu Profile</a></li>
 					<li><a href="./gallery.html">Gallery</a></li>
 					<li class="active"><a href="./events.html">Events</a></li>
 				</ul>
