--- a/gallery.html
+++ b/gallery.html
@@ -69,37 +69,37 @@
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-1.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#onetime#8401" class="site-btn sb-light">Next</a>
+						<a href="./events.html#onetime#8401" class="site-btn sb-light">Visit</a>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-2.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#verox1#0000" class="site-btn sb-light">Next</a>
+						<a href="./events.html#verox1#0000" class="site-btn sb-light">Visit</a>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-3.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#imnoob#5424" class="site-btn sb-light">Next</a>
+						<a href="./events.html#imnoob#5424" class="site-btn sb-light">Visit</a>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-4.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#daniimuts#0000" class="site-btn sb-light">Next</a>
+						<a href="./events.html#daniimuts#0000" class="site-btn sb-light">Visit</a>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-5.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#adamjuz#9960" class="site-btn sb-light">Next</a>
+						<a href="./events.html#adamjuz#9960" class="site-btn sb-light">Visit</a>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-6.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#angelmnzz#3256" class="site-btn sb-light">Next</a>
+						<a href="./events.html#angelmnzz#3256" class="site-btn sb-light">Visit</a>
 					</div>
 				</div>
 			</div>
