--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<title>Miawu - Profile</title>
 	<meta charset="UTF-8">
@@ -68,8 +67,8 @@
 					<div class="col-xl-6 p-0">
 						<div class="gallery-single-text">
 							<span>Miawu Profile Info</span>
-							<h2>Miawu</h2>
 							<ul>
+								<li><span>Tribe Name:</span>Miawu</li>
 								<li><span>Tribe ID:</span>1147896</li>
 								<li><span>Region:</span>Indonesia (ID/IDN)</li>
 								<li><span>Date:</span>09/04/2020</li>
