--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 						<div class="gallery-single-text">
 							<span>Miawu Profile Info</span>
 							<ul>
-								<li><span>Tribe Name:</span>Miawu</li>
-								<li><span>Tribe ID:</span>1147896</li>
-								<li><span>Region:</span>Indonesia (ID/IDN)</li>
-								<li><span>Date:</span>09/04/2020</li>
+								<li><span>Name</span>Miawu</li>
+								<li><span>ID</span>1147896</li>
+								<li><span>Region</span>Indonesia (ID/IDN)</li>
+								<li><span>Date</span>09/04/2020</li>
 							</ul>
 						</div>
 					</div>
