--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<title>Miawu - Profile</title>
 	<meta charset="UTF-8">
@@ -49,9 +48,10 @@
 					<img src="img/miawuk.png" alt="">
 				</a>
 				<ul class="main-menu">
-					<li class="active"><a href="./miawu-profile.html">Miawu Profile</a></li>
+					<li class="active"><a href="./index.html">Miawu Profile</a></li>
 					<li><a href="./gallery.html">Gallery</a></li>
-					<li><a href="./events.html">Events</a></li>
+					<li><a href="./event-list.html">Event List</a></li>
+					<li><a href="./contact.html">Admin Contact</a></li>
 				</ul>
 		</header>
 		<!-- header section end -->
@@ -62,17 +62,17 @@
 				<div class="row">
 					<div class="col-xl-6 p-0">
 						<div class="gallery-single-slider owl-carousel">
-							<img src="img/unknown.png" alt="">
+							<img src="img/miawu-removed.png" alt="">
 						</div>
 					</div>
 					<div class="col-xl-6 p-0">
 						<div class="gallery-single-text">
 							<span>Miawu Profile Info</span>
-							<h2>Miawu</h2>
 							<ul>
-								<li><span>Tribe ID:</span>1147896</li>
-								<li><span>Region:</span>Indonesia (ID/IDN)</li>
-								<li><span>Date:</span>09/04/2020</li>
+								<li><span>Name</span>Miawu</li>
+								<li><span>ID</span>1147896</li>
+								<li><span>Region</span>Indonesia (ID/IDN)</li>
+								<li><span>Date</span>09/04/2020</li>
 							</ul>
 						</div>
 					</div>
