--- a/gallery.html
+++ b/gallery.html
@@ -49,9 +49,10 @@
 					<img src="img/miawuk.png" alt="">
 				</a>
 				<ul class="main-menu">
-					<li><a href="./miawu-profile.html">Miawu Profile</a></li>
+					<li><a href="./index.html">Miawu Profile</a></li>
 					<li class="active"><a href="./gallery.html">Gallery</a></li>
-					<li><a href="./events.html">Events</a></li>
+					<li><a href="./event-list.html">Event List</a></li>
+					<li><a href="./contact.html">Admin Contact</a></li>
 				</ul>
 		</header>
 		<!-- header section end -->
@@ -69,37 +70,37 @@
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-1.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#onetime#8401" class="site-btn sb-light">Next</a>
+						<a href="./events.html#onetime#8401" class="site-btn sb-light">Visit</a>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-2.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#verox1#0000" class="site-btn sb-light">Next</a>
+						<a href="./events.html#verox1#0000" class="site-btn sb-light">Visit</a>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-3.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#imnoob#5424" class="site-btn sb-light">Next</a>
+						<a href="./events.html#imnoob#5424" class="site-btn sb-light">Visit</a>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-4.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#daniimuts#0000" class="site-btn sb-light">Next</a>
+						<a href="./events.html#daniimuts#0000" class="site-btn sb-light">Visit</a>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-5.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#adamjuz#9960" class="site-btn sb-light">Next</a>
+						<a href="./events.html#adamjuz#9960" class="site-btn sb-light">Visit</a>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-6.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#angelmnzz#3256" class="site-btn sb-light">Next</a>
+						<a href="./events.html#angelmnzz#3256" class="site-btn sb-light">Visit</a>
 					</div>
 				</div>
 			</div>
