--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
 					<img src="img/miawuk.png" alt="">
 				</a>
 				<ul class="main-menu">
-					<li class="active"><a href="./index.html">Miawu Profile</a></li>
-					<li><a href="./gallery.html">Gallery</a></li>
-					<li><a href="./events.html">Events</a></li>
+					<li class="active"><a href="./index.html">Profil Miawu</a></li>
+					<li><a href="./gallery.html">Galeri</a></li>
+					<li><a href="./event-list.html">Daftar Acara</a></li>
+					<li><a href="./contact.html">Kontak Admin</a></li>
 				</ul>
 		</header>
 		<!-- header section end -->
@@ -61,7 +62,7 @@
 				<div class="row">
 					<div class="col-xl-6 p-0">
 						<div class="gallery-single-slider owl-carousel">
-							<img src="img/unknown.png" alt="">
+							<img src="img/miawu-removed.png" alt="">
 						</div>
 					</div>
 					<div class="col-xl-6 p-0">
