--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
 	<title>Miawu - Gallery</title>
 	<meta charset="UTF-8">
@@ -49,9 +48,10 @@
 					<img src="img/miawuk.png" alt="">
 				</a>
 				<ul class="main-menu">
-					<li><a href="./index.html">Miawu Profile</a></li>
-					<li class="active"><a href="./gallery.html">Gallery</a></li>
-					<li><a href="./events.html">Events</a></li>
+					<li><a href="./index.html">Profil Miawu</a></li>
+					<li class="active"><a href="./gallery.html">Galeri</a></li>
+					<li><a href="./event-list.html">Daftar Acara</a></li>
+					<li><a href="./contact.html">Kontak Admin</a></li>
 				</ul>
 		</header>
 		<!-- header section end -->
@@ -69,37 +69,37 @@
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-1.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#onetime#8401" class="site-btn sb-light">Visit</a>
+						<a href="./event-list.html#onetime#8401" class="site-btn sb-light">Visit</a>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-2.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#verox1#0000" class="site-btn sb-light">Visit</a>
+						<a href="./event-list.html#verox1#0000" class="site-btn sb-light">Visit</a>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-3.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#imnoob#5424" class="site-btn sb-light">Visit</a>
+						<a href="./event-list.html#imnoob#5424" class="site-btn sb-light">Visit</a>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-4.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#daniimuts#0000" class="site-btn sb-light">Visit</a>
+						<a href="./event-list.html#daniimuts#0000" class="site-btn sb-light">Visit</a>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-5.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#adamjuz#9960" class="site-btn sb-light">Visit</a>
+						<a href="./event-list.html#adamjuz#9960" class="site-btn sb-light">Visit</a>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-6.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#angelmnzz#3256" class="site-btn sb-light">Visit</a>
+						<a href="./event-list.html#angelmnzz#3256" class="site-btn sb-light">Visit</a>
 					</div>
 				</div>
 			</div>
