--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,6 @@
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
 
-
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="css/font-awesome.min.css"/>
@@ -63,44 +62,44 @@
 				<li class="filter" data-filter=".17an">17-an</li>
 			</ul>
 			<div class="portfolio-gallery">
-				<div class="gallery-item animals">
+				<div class="gallery-item logo">
 					<img src="img/unknown.png" alt="">
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-1.png" alt="">
-					<div class="hover-links">
+					<!-- <div class="hover-links">
 						<a href="./event-list.html#onetime#8401" class="site-btn sb-light">Visit</a>
-					</div>
+					</div> -->
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-2.png" alt="">
-					<div class="hover-links">
+					<!-- <div class="hover-links">
 						<a href="./event-list.html#verox1#0000" class="site-btn sb-light">Visit</a>
-					</div>
+					</div> -->
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-3.png" alt="">
-					<div class="hover-links">
+					<!-- <div class="hover-links">
 						<a href="./event-list.html#imnoob#5424" class="site-btn sb-light">Visit</a>
-					</div>
+					</div> -->
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-4.png" alt="">
-					<div class="hover-links">
+					<!-- <div class="hover-links">
 						<a href="./event-list.html#daniimuts#0000" class="site-btn sb-light">Visit</a>
-					</div>
+					</div> -->
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-5.png" alt="">
-					<div class="hover-links">
+					<!-- <div class="hover-links">
 						<a href="./event-list.html#adamjuz#9960" class="site-btn sb-light">Visit</a>
-					</div>
+					</div> -->
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-6.png" alt="">
-					<div class="hover-links">
+					<!-- <div class="hover-links">
 						<a href="./event-list.html#angelmnzz#3256" class="site-btn sb-light">Visit</a>
-					</div>
+					</div> -->
 				</div>
 			</div>
 
