--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
               <h2>Geamanda</h2>
               <div class="title title--owner">Tikus Sombong</div>
               <div class="desc">Hmmm, Bingung</div>
-              <img width="200" height="200" src="https://pbs.twimg.com/media/Ec-kcD1UcAAsGt0.jpg"/>
+              <!-- <img width="200" height="200" src="https://pbs.twimg.com/media/Ec-kcD1UcAAsGt0.jpg"/> -->
                 <div class="actions">
                 <a href="https://instagram.com/jeromepolin" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
                 <a href="https://twitter.com/jeromepolin" target="_blank"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
@@ -76,7 +76,7 @@
               <h2>Rwrw</h2>
               <div class="title title--epic">Tikus Gembul</div>
               <div class="desc">Aku ndak suka ABR</div>
-              <img width="200" height="200" src="https://cdn.discordapp.com/avatars/525287599112454144/a_acaba2a269e92368d4b283e97c5d844c.gif?size=4096"/>
+              <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/525287599112454144/a_acaba2a269e92368d4b283e97c5d844c.gif?size=4096"/> -->
                 <div class="actions">
                 <a href="https://instagram.com/t_rash.exe" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
                 <a href="https://cheese.formice.com/transformice/mouse/reighpuy%231623" target="_blank"><i class="fa fa-user fa-3x" aria-hidden="true"></i></a>
@@ -88,7 +88,7 @@
               <h2>Wilson</h2>
               <div class="title title--epic">Tikus Wu</div>
               <div class="desc">儿子，你很棒</div>
-              <img width="200" height="200" src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=4096"/>
+              <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=4096"/> -->
                 <div class="actions">
                 <a href="https://github.com/wils446" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
                 <a href="https://cheese.formice.com/transformice/mouse/verox1%230000" target="_blank"><i class="fa fa-user fa-3x" aria-hidden="true"></i></a>
@@ -100,7 +100,7 @@
               <h2>Reighpuy</h2>
               <div class="title title--legendary">Sarden</div>
               <div class="desc">Hey there! I am using WhatsApp.</div>
-              <img width="200" height="200" src="https://vignette4.wikia.nocookie.net/hunterxhunter/images/4/4d/Ging_Freecss_%2810%29.png/revision/latest?cb=20150615122232"/>
+              <!-- <img width="200" height="200" src="https://vignette4.wikia.nocookie.net/hunterxhunter/images/4/4d/Ging_Freecss_%2810%29.png/revision/latest?cb=20150615122232"/> -->
                 <div class="actions">
                 <a href="https://instagram.com/muh.khadaffy" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
                 <a href="https://github.com/reighpuy" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
