--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
+	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 
 	<!-- Stylesheets -->
@@ -44,8 +45,8 @@
 				<i class="fa fa-times"></i>
 			</div>
 			<div class="header-warp">
-				<a href="" class="site-logo">
-					<img src="img/miawuk.png" alt="">
+				<a href="https://cheese.formice.com/transformice/tribe/1147896" target="_blank" class="site-logo">
+					<img src="img/miawu-removed.png" alt="Miawu">
 				</a>
 				<ul class="main-menu">
 					<li class="active"><a href="./index.html">Profil Miawu</a></li>
@@ -62,7 +63,9 @@
 				<div class="row">
 					<div class="col-xl-6 p-0">
 						<div class="gallery-single-slider owl-carousel">
-							<img src="img/miawu-removed.png" alt="">
+							<a href="https://cheese.formice.com/transformice/tribe/1147896" target="_blank">
+								<img src="img/miawu-removed.png" alt="Miawu">
+							</a>
 						</div>
 					</div>
 					<div class="col-xl-6 p-0">
