--- a/gallery.html
+++ b/gallery.html
@@ -9,6 +9,7 @@
 
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
+	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="css/bootstrap.min.css"/>
@@ -43,8 +44,8 @@
 				<i class="fa fa-times"></i>
 			</div>
 			<div class="header-warp">
-				<a href="" class="site-logo">
-					<img src="img/miawuk.png" alt="">
+				<a href="https://cheese.formice.com/transformice/tribe/1147896" target="_blank" class="site-logo">
+					<img src="img/miawu-removed.png" alt="Miawu">
 				</a>
 				<ul class="main-menu">
 					<li><a href="./index.html">Profil Miawu</a></li>
@@ -58,12 +59,16 @@
 		<!-- Page section -->
 		<div class="page-section gallery-page">
 			<ul class="portfolio-filter">
-				<li class="filter all active" data-filter="*">All</li>
+				<li class="filter all active" data-filter="*">Semua</li>
 				<li class="filter" data-filter=".17an">17-an</li>
+				<li class="filter" data-filter=".logo">Logo</li>
 			</ul>
 			<div class="portfolio-gallery">
 				<div class="gallery-item logo">
 					<img src="img/unknown.png" alt="">
+				</div>
+				<div class="gallery-item logo">
+					<img src="img/miawu-id.png" alt="">
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-1.png" alt="">
@@ -97,6 +102,18 @@
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-6.png" alt="">
+					<!-- <div class="hover-links">
+						<a href="./event-list.html#angelmnzz#3256" class="site-btn sb-light">Visit</a>
+					</div> -->
+				</div>
+				<div class="gallery-item 17an">
+					<img src="img/lomba-gambar-7.png" alt="">
+					<!-- <div class="hover-links">
+						<a href="./event-list.html#angelmnzz#3256" class="site-btn sb-light">Visit</a>
+					</div> -->
+				</div>
+				<div class="gallery-item 17an">
+					<img src="img/lomba-gambar-8.png" alt="">
 					<!-- <div class="hover-links">
 						<a href="./event-list.html#angelmnzz#3256" class="site-btn sb-light">Visit</a>
 					</div> -->
