--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,8 @@
 				<i class="fa fa-times"></i>
 			</div>
 			<div class="header-warp">
-				<a href="" class="site-logo">
-					<img src="img/miawuk.png" alt="">
+				<a href="https://cheese.formice.com/transformice/tribe/1147896" target="_blank" class="site-logo">
+					<img src="img/miawu-removed.png" alt="Miawu">
 				</a>
 				<ul class="main-menu">
 					<li><a href="./index.html">Profil Miawu</a></li>
@@ -60,9 +60,9 @@
 		<!-- Page section -->
         <div class="container">
             <div class="card">
-              <h2>Geamanda</h2>
-              <div class="title title--owner">Tikus Sombong</div>
-              <div class="desc">Hmmm, Bingung</div>
+              <h2>Miak</h2>
+              <div class="title title--legendary">Tikus Sombong</div>
+              <div class="desc">Cintamu, Senyaman Mentari Pagi...</div>
               <!-- <img width="200" height="200" src="https://pbs.twimg.com/media/Ec-kcD1UcAAsGt0.jpg"/> -->
                 <div class="actions">
                 <a href="https://instagram.com/jeromepolin" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
@@ -70,36 +70,86 @@
                 <a href="https://cheese.formice.com/transformice/mouse/mia26%230000" target="_blank"><i class="fa fa-user fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
+		</div>
+        <div class="container">
+            <div class="card">
+              <h2>Brendod</h2>
+              <div class="title title--epic">Tikus Xixixi</div>
+              <div class="desc">ML Mantap.</div>
+              <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=4096"/> -->
+                <div class="actions">
+                <button></button>
+                <a href="https://cheese.formice.com/transformice/mouse/spieky%230000" target="_blank"><i class="fa fa-user fa-3x" aria-hidden="true"></i></a>
+                </div>
+            </div>
         </div>
         <div class="container">
             <div class="card">
               <h2>Rwrw</h2>
               <div class="title title--epic">Tikus Gembul</div>
-              <div class="desc">Aku ndak suka ABR</div>
+              <div class="desc">Aku ndak suka ABR.</div>
               <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/525287599112454144/a_acaba2a269e92368d4b283e97c5d844c.gif?size=4096"/> -->
                 <div class="actions">
-                <a href="https://instagram.com/t_rash.exe" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
+				<a href="https://instagram.com/t_rash.exe" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
+				<button></button>
                 <a href="https://cheese.formice.com/transformice/mouse/reighpuy%231623" target="_blank"><i class="fa fa-user fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="card">
-              <h2>Wilson</h2>
-              <div class="title title--epic">Tikus Wu</div>
-              <div class="desc">儿子，你很棒</div>
+              <h2>Minek</h2>
+              <div class="title title--epic">Tikus Kelainan</div>
+              <div class="desc">Sandi.</div>
               <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=4096"/> -->
                 <div class="actions">
-                <a href="https://github.com/wils446" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+				<button></button>
+                <a href="https://cheese.formice.com/transformice/mouse/jasminevza%230451" target="_blank"><i class="fa fa-user fa-3x" aria-hidden="true"></i></a>
+                </div>
+            </div>
+		</div>
+        <div class="container">
+            <div class="card">
+              <h2>Alice</h2>
+              <div class="title title--epic">Tikus Mantap</div>
+              <div class="desc">Halo aku Alis dari gugus 20.</div>
+              <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=4096"/> -->
+                <div class="actions">
+                <button></button>
+                <a href="https://cheese.formice.com/transformice/mouse/alicekwkland%230000" target="_blank"><i class="fa fa-user fa-3x" aria-hidden="true"></i></a>
+                </div>
+            </div>
+		</div>
+        <div class="container">
+            <div class="card">
+              <h2>Aslam</h2>
+              <div class="title title--epic">Tikus Gabut ter-Mantap</div>
+              <div class="desc">Halo aku Aslam dari gugus 21.</div>
+              <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=4096"/> -->
+                <div class="actions">
+                <button></button>
+                <a href="https://cheese.formice.com/transformice/mouse/aslaaaam%230000" target="_blank"><i class="fa fa-user fa-3x" aria-hidden="true"></i></a>
+                </div>
+            </div>
+		</div>
+        <div class="container">
+            <div class="card">
+              <h2>Wilson</h2>
+              <div class="title title--owner">Tikus Wu</div>
+              <div class="desc">我很好.</div>
+              <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=4096"/> -->
+                <div class="actions">
+				<a href="https://github.com/wils446" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+				<button></button>
                 <a href="https://cheese.formice.com/transformice/mouse/verox1%230000" target="_blank"><i class="fa fa-user fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
-        </div>
+		</div>
         <div class="container">
             <div class="card">
               <h2>Reighpuy</h2>
-              <div class="title title--legendary">Sarden</div>
-              <div class="desc">Hey there! I am using WhatsApp.</div>
+              <div class="title title--owner">Sarden</div>
+              <div class="desc">Hah?</div>
               <!-- <img width="200" height="200" src="https://vignette4.wikia.nocookie.net/hunterxhunter/images/4/4d/Ging_Freecss_%2810%29.png/revision/latest?cb=20150615122232"/> -->
                 <div class="actions">
                 <a href="https://instagram.com/muh.khadaffy" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
