--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,7 @@
 		<!-- Page section -->
         <div class="container">
             <div class="card">
+			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Miak</h2>
               <div class="title title--legendary">Tikus Sombong</div>
               <div class="desc">Cintamu, Senyaman Mentari Pagi...</div>
@@ -67,24 +68,26 @@
                 <div class="actions">
                 <a href="https://instagram.com/jeromepolin" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
                 <a href="https://twitter.com/jeromepolin" target="_blank"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
-                <a href="https://cheese.formice.com/transformice/mouse/mia26%230000" target="_blank"><i class="fa fa-user fa-3x" aria-hidden="true"></i></a>
+                <a href="https://cheese.formice.com/transformice/mouse/mia26%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
         <div class="container">
             <div class="card">
+			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Brendod</h2>
               <div class="title title--epic">Tikus Xixixi</div>
               <div class="desc">ML Mantap.</div>
               <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=4096"/> -->
                 <div class="actions">
                 <button></button>
-                <a href="https://cheese.formice.com/transformice/mouse/spieky%230000" target="_blank"><i class="fa fa-user fa-3x" aria-hidden="true"></i></a>
+                <a href="https://cheese.formice.com/transformice/mouse/spieky%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="card">
+			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Rwrw</h2>
               <div class="title title--epic">Tikus Gembul</div>
               <div class="desc">Aku ndak suka ABR.</div>
@@ -92,48 +95,52 @@
                 <div class="actions">
 				<a href="https://instagram.com/t_rash.exe" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
 				<button></button>
-                <a href="https://cheese.formice.com/transformice/mouse/ruru%231623" target="_blank"><i class="fa fa-user fa-3x" aria-hidden="true"></i></a>
+                <a href="https://cheese.formice.com/transformice/mouse/ruru%231623" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="card">
+			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Minek</h2>
               <div class="title title--epic">Tikus Kelainan</div>
               <div class="desc">Sandi.</div>
               <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=4096"/> -->
                 <div class="actions">
 				<button></button>
-                <a href="https://cheese.formice.com/transformice/mouse/jasminevza%230451" target="_blank"><i class="fa fa-user fa-3x" aria-hidden="true"></i></a>
+                <a href="https://cheese.formice.com/transformice/mouse/jasminevza%230451" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
         <div class="container">
             <div class="card">
+			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Alice</h2>
               <div class="title title--epic">Tikus Mantap</div>
               <div class="desc">Halo aku Alis dari gugus 20.</div>
               <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=4096"/> -->
                 <div class="actions">
                 <button></button>
-                <a href="https://cheese.formice.com/transformice/mouse/alicekwkland%230000" target="_blank"><i class="fa fa-user fa-3x" aria-hidden="true"></i></a>
+                <a href="https://cheese.formice.com/transformice/mouse/alicekwkland%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
         <div class="container">
             <div class="card">
+			  <i class="fa fa-mars fa-2x" aria-hidden="true"></i>
               <h2>Aslam</h2>
               <div class="title title--epic">Tikus Gabut ter-Mantap</div>
               <div class="desc">Halo aku Aslam dari gugus 21.</div>
               <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=4096"/> -->
                 <div class="actions">
                 <button></button>
-                <a href="https://cheese.formice.com/transformice/mouse/aslaaaam%230000" target="_blank"><i class="fa fa-user fa-3x" aria-hidden="true"></i></a>
+                <a href="https://cheese.formice.com/transformice/mouse/aslaaaam%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
         <div class="container">
             <div class="card">
+			  <i class="fa fa-mars fa-2x" aria-hidden="true"></i>
               <h2>Wilson</h2>
               <div class="title title--owner">Tikus Wu</div>
               <div class="desc">我很好.</div>
@@ -141,12 +148,13 @@
                 <div class="actions">
 				<a href="https://github.com/wils446" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
 				<button></button>
-                <a href="https://cheese.formice.com/transformice/mouse/verox1%230000" target="_blank"><i class="fa fa-user fa-3x" aria-hidden="true"></i></a>
+                <a href="https://cheese.formice.com/transformice/mouse/verox1%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
         <div class="container">
             <div class="card">
+			  <i class="fa fa-mars fa-2x" aria-hidden="true"></i>
               <h2>Reighpuy</h2>
               <div class="title title--owner">Sarden</div>
               <div class="desc">Hah?</div>
@@ -154,8 +162,8 @@
                 <div class="actions">
                 <a href="https://instagram.com/muh.khadaffy" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
                 <a href="https://github.com/reighpuy" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-                <a href="https://cheese.formice.com/transformice/mouse/reighpuy%231257" target="_blank"><i class="fa fa-user fa-3x" aria-hidden="true"></i></a>
-                </div>
+				<a href="https://cheese.formice.com/transformice/mouse/reighpuy%231257" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
+				</div>
             </div>
         </div>
     <!---->
