--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
             <div class="card">
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Miak</h2>
-              <div class="title title--legendary">Tikus Sombong</div>
+              <div class="title title--owner">Tikus Sombong</div>
               <div class="desc">Cintamu, Senyaman Mentari Pagi...</div>
               <!-- <img width="200" height="200" src="https://pbs.twimg.com/media/Ec-kcD1UcAAsGt0.jpg"/> -->
                 <div class="actions">
