--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
             <div class="card">
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Brendod</h2>
-              <div class="title title--epic">Tikus Xixixi</div>
+              <div class="title title--legendary">Tikus Xixixi</div>
               <div class="desc">ML Mantap.</div>
               <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=4096"/> -->
                 <div class="actions">
