--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
             <div class="card">
 			  <i class="fa fa-mars fa-2x" aria-hidden="true"></i>
               <h2>Wilson</h2>
-              <div class="title title--owner">Tikus Wu</div>
+              <div class="title title--servicer">Tikus Wu</div>
               <div class="desc">我很好.</div>
               <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=4096"/> -->
                 <div class="actions">
@@ -156,7 +156,7 @@
             <div class="card">
 			  <i class="fa fa-mars fa-2x" aria-hidden="true"></i>
               <h2>Reighpuy</h2>
-              <div class="title title--owner">Sarden</div>
+              <div class="title title--servicer">Sarden</div>
               <div class="desc">Hah?</div>
               <!-- <img width="200" height="200" src="https://vignette4.wikia.nocookie.net/hunterxhunter/images/4/4d/Ging_Freecss_%2810%29.png/revision/latest?cb=20150615122232"/> -->
                 <div class="actions">
