--- a/contact.html
+++ b/contact.html
@@ -63,8 +63,8 @@
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Miak</h2>
               <div class="title title--owner">Tikus Sombong</div>
-              <div class="desc">Cintamu, Senyaman Mentari Pagi...</div>
-              <!-- <img width="200" height="200" src="https://pbs.twimg.com/media/Ec-kcD1UcAAsGt0.jpg"/> -->
+			  <div class="desc">Cintamu, Senyaman Mentari Pagi...</div>
+			  <img src="img/mia.png"/>
                 <div class="actions">
                 <a href="https://instagram.com/jeromepolin" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
                 <a href="https://twitter.com/jeromepolin" target="_blank"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
@@ -77,8 +77,8 @@
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Brendod</h2>
               <div class="title title--legendary">Tikus Xixixi</div>
-              <div class="desc">ML Mantap.</div>
-              <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=4096"/> -->
+			  <div class="desc">ML Mantap.</div>
+			  <img src="img/brendod.png"/>
                 <div class="actions">
                 <button></button>
                 <a href="https://cheese.formice.com/transformice/mouse/spieky%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
@@ -90,8 +90,8 @@
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Rwrw</h2>
               <div class="title title--epic">Tikus Gembul</div>
-              <div class="desc">Aku ndak suka ABR.</div>
-              <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/525287599112454144/a_acaba2a269e92368d4b283e97c5d844c.gif?size=4096"/> -->
+			  <div class="desc">Aku ndak suka ABR.</div>
+			  <img src="img/ruru.png"/>
                 <div class="actions">
 				<a href="https://instagram.com/t_rash.exe" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
 				<button></button>
@@ -104,8 +104,8 @@
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Minek</h2>
               <div class="title title--epic">Tikus Kelainan</div>
-              <div class="desc">Sandi.</div>
-              <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=4096"/> -->
+			  <div class="desc">Sandi.</div>
+			  <img src="img/minek.png"/>
                 <div class="actions">
 				<button></button>
                 <a href="https://cheese.formice.com/transformice/mouse/jasminevza%230451" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
@@ -117,8 +117,8 @@
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Alice</h2>
               <div class="title title--epic">Tikus Mantap</div>
-              <div class="desc">Halo aku Alis dari gugus 20.</div>
-              <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=4096"/> -->
+			  <div class="desc">Halo aku Alis dari gugus 20.</div>
+			  <img src="img/alice.png"/>
                 <div class="actions">
                 <button></button>
                 <a href="https://cheese.formice.com/transformice/mouse/alicekwkland%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
@@ -130,8 +130,8 @@
 			  <i class="fa fa-mars fa-2x" aria-hidden="true"></i>
               <h2>Aslam</h2>
               <div class="title title--epic">Tikus Gabut ter-Mantap</div>
-              <div class="desc">Halo aku Aslam dari gugus 21.</div>
-              <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=4096"/> -->
+			  <div class="desc">Halo aku Aslam dari gugus 21.</div>
+			  <img src="img/aslam.png"/>
                 <div class="actions">
                 <button></button>
                 <a href="https://cheese.formice.com/transformice/mouse/aslaaaam%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
@@ -144,7 +144,7 @@
               <h2>Wilson</h2>
               <div class="title title--servicer">Tikus Wu</div>
               <div class="desc">我很好.</div>
-              <!-- <img width="200" height="200" src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=4096"/> -->
+			  <img src="img/wilson.png"/>
                 <div class="actions">
 				<a href="https://github.com/wils446" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
 				<button></button>
@@ -158,7 +158,7 @@
               <h2>Reighpuy</h2>
               <div class="title title--servicer">Sarden</div>
               <div class="desc">Hah?</div>
-              <!-- <img width="200" height="200" src="https://vignette4.wikia.nocookie.net/hunterxhunter/images/4/4d/Ging_Freecss_%2810%29.png/revision/latest?cb=20150615122232"/> -->
+			<img src="img/dapi.png"/>
                 <div class="actions">
                 <a href="https://instagram.com/muh.khadaffy" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
                 <a href="https://github.com/reighpuy" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
