--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,7 @@
 					<li><a href="./index.html">Profil Miawu</a></li>
 					<li class="active"><a href="./gallery.html">Galeri</a></li>
 					<li><a href="./event-list.html">Daftar Acara</a></li>
-					<li><a href="./contact.html">Kontak Admin</a></li>
+					<li><a href="./contact.html">Para Pengurus</a></li>
 				</ul>
 		</header>
 		<!-- header section end -->
