--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
 					<li><a href="./index.html">Profil Miawu</a></li>
 					<li><a href="./gallery.html">Galeri</a></li>
 					<li><a href="./event-list.html">Daftar Acara</a></li>
-					<li class="active"><a href="./contact.html">Kontak Admin</a></li>
+					<li class="active"><a href="./contact.html"Para Pengurus</a></li>
 				</ul>
 		</header>
 		<!-- header section end -->
@@ -142,7 +142,7 @@
             <div class="card">
 			  <i class="fa fa-mars fa-2x" aria-hidden="true"></i>
               <h2>Wilson</h2>
-              <div class="title title--servicer">Tikus Wu</div>
+              <div class="title title--servicer">Tikus Gwd</div>
               <div class="desc">我很好.</div>
 			  <img src="img/wilson.png"/>
                 <div class="actions">
