--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,7 @@
 					<li><a href="./index.html">Profil Miawu</a></li>
 					<li class="active"><a href="./gallery.html">Galeri</a></li>
 					<li><a href="./event-list.html">Daftar Acara</a></li>
-					<li><a href="./contact.html">Para Pengurus</a></li>
+					<li><a href="./contact.html">Kontak Admin</a></li>
 				</ul>
 		</header>
 		<!-- header section end -->
@@ -66,60 +66,66 @@
 			<div class="portfolio-gallery">
 				<div class="gallery-item logo">
 					<img src="img/unknown.png" alt="">
+					<div class="hover-links">
+						<h2>Miawu Logo</h2>
+					</div>
 				</div>
 				<div class="gallery-item logo">
 					<img src="img/miawu-id.png" alt="">
+					<div class="hover-links">
+						<h2>Miawu Logo</h2>
+					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-1.png" alt="">
-					<!-- <div class="hover-links">
-						<a href="./event-list.html#onetime#8401" class="site-btn sb-light">Visit</a>
-					</div> -->
+					<div class="hover-links">
+						<!-- <a href="./event-list.html#onetime#8401" class="site-btn sb-light">Visit</a> -->
+						<p>Lomba Menggambar dengan Surat, <br>By <font color="red">Onetime#8401</p></font>
+					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-2.png" alt="">
-					<!-- <div class="hover-links">
-						<a href="./event-list.html#verox1#0000" class="site-btn sb-light">Visit</a>
-					</div> -->
+					<div class="hover-links">
+						<p>Lomba Menggambar dengan Surat, <br>By <font color="red">Verox1#0000</p></font>
+					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-3.png" alt="">
-					<!-- <div class="hover-links">
-						<a href="./event-list.html#imnoob#5424" class="site-btn sb-light">Visit</a>
-					</div> -->
+					<div class="hover-links">
+						<p>Lomba Menggambar dengan Surat, <br>By <font color="red">Imnoob#5424</p></font>
+					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-4.png" alt="">
-					<!-- <div class="hover-links">
-						<a href="./event-list.html#daniimuts#0000" class="site-btn sb-light">Visit</a>
-					</div> -->
+					<div class="hover-links">
+						<p>Lomba Menggambar dengan Surat, <br>By <font color="red">Daniimuts#0000</p></font>
+					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-5.png" alt="">
-					<!-- <div class="hover-links">
-						<a href="./event-list.html#adamjuz#9960" class="site-btn sb-light">Visit</a>
-					</div> -->
+					<div class="hover-links">
+						<p>Lomba Menggambar dengan Surat, <br>By <font color="red">Adamjuz#9960</p></font>
+					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-6.png" alt="">
-					<!-- <div class="hover-links">
-						<a href="./event-list.html#angelmnzz#3256" class="site-btn sb-light">Visit</a>
-					</div> -->
+					<div class="hover-links">
+						<p>Lomba Menggambar dengan Surat, <br>By <font color="red">Angelmnzz#3256</p></font>
+					</div>>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-7.png" alt="">
-					<!-- <div class="hover-links">
-						<a href="./event-list.html#angelmnzz#3256" class="site-btn sb-light">Visit</a>
-					</div> -->
+					<div class="hover-links">
+						<p>Lomba Menggambar dengan Surat, <br>By <font color="red">Spieky#0000</p></font>
+					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-8.png" alt="">
-					<!-- <div class="hover-links">
-						<a href="./event-list.html#angelmnzz#3256" class="site-btn sb-light">Visit</a>
-					</div> -->
+					<div class="hover-links">
+						<p>Lomba Menggambar dengan Surat, <br>By <font color="red">Yama#2676</p></font>
+					</div>
 				</div>
 			</div>
-
 		</div>
 		<!-- Page section end-->
 	</div>
