--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
+	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 
 	<!-- Stylesheets -->
@@ -44,14 +45,14 @@
 				<i class="fa fa-times"></i>
 			</div>
 			<div class="header-warp">
-				<a href="" class="site-logo">
-					<img src="img/miawuk.png" alt="">
+				<a href="https://cheese.formice.com/transformice/tribe/1147896" target="_blank" class="site-logo">
+					<img src="img/miawu-removed.png" alt="Miawu">
 				</a>
 				<ul class="main-menu">
-					<li class="active"><a href="./index.html">Miawu Profile</a></li>
-					<li><a href="./gallery.html">Gallery</a></li>
-					<li><a href="./event-list.html">Event List</a></li>
-					<li><a href="./contact.html">Admin Contact</a></li>
+					<li class="active"><a href="./index.html">Profil Miawu</a></li>
+					<li><a href="./gallery.html">Galeri</a></li>
+					<li><a href="./event-list.html">Daftar Acara</a></li>
+					<li><a href="./contact.html">Kontak Admin</a></li>
 				</ul>
 		</header>
 		<!-- header section end -->
@@ -60,11 +61,9 @@
 		<div class="page-section gallery-single-page">
 			<div class="gallery-single-warp">
 				<div class="row">
-					<div class="col-xl-6 p-0">
-						<div class="gallery-single-slider owl-carousel">
-							<img src="img/miawu-removed.png" alt="">
-						</div>
-					</div>
+					<a href="https://cheese.formice.com/transformice/tribe/1147896" target="_blank">
+						<img src="img/miawu-removed.png" alt="Miawu">
+					</a>
 					<div class="col-xl-6 p-0">
 						<div class="gallery-single-text">
 							<span>Miawu Profile Info</span>
