--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
 	<title>Miawu - Gallery</title>
 	<meta charset="UTF-8">
@@ -10,7 +9,7 @@
 
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
-
+	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="css/bootstrap.min.css"/>
@@ -45,14 +44,14 @@
 				<i class="fa fa-times"></i>
 			</div>
 			<div class="header-warp">
-				<a href="" class="site-logo">
-					<img src="img/miawuk.png" alt="">
+				<a href="https://cheese.formice.com/transformice/tribe/1147896" target="_blank" class="site-logo">
+					<img src="img/miawu-removed.png" alt="Miawu">
 				</a>
 				<ul class="main-menu">
-					<li><a href="./index.html">Miawu Profile</a></li>
-					<li class="active"><a href="./gallery.html">Gallery</a></li>
-					<li><a href="./event-list.html">Event List</a></li>
-					<li><a href="./contact.html">Admin Contact</a></li>
+					<li><a href="./index.html">Profil Miawu</a></li>
+					<li class="active"><a href="./gallery.html">Galeri</a></li>
+					<li><a href="./event-list.html">Daftar Acara</a></li>
+					<li><a href="./contact.html">Kontak Admin</a></li>
 				</ul>
 		</header>
 		<!-- header section end -->
@@ -60,51 +59,73 @@
 		<!-- Page section -->
 		<div class="page-section gallery-page">
 			<ul class="portfolio-filter">
-				<li class="filter all active" data-filter="*">All</li>
+				<li class="filter all active" data-filter="*">Semua</li>
 				<li class="filter" data-filter=".17an">17-an</li>
+				<li class="filter" data-filter=".logo">Logo</li>
 			</ul>
 			<div class="portfolio-gallery">
-				<div class="gallery-item animals">
+				<div class="gallery-item logo">
 					<img src="img/unknown.png" alt="">
+					<div class="hover-links">
+						<h2>Miawu Logo</h2>
+					</div>
+				</div>
+				<div class="gallery-item logo">
+					<img src="img/miawu-id.png" alt="">
+					<div class="hover-links">
+						<h2>Miawu Logo</h2>
+					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-1.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#onetime#8401" class="site-btn sb-light">Visit</a>
+						<!-- <a href="./event-list.html#onetime#8401" class="site-btn sb-light">Visit</a> -->
+						<p>Lomba Menggambar dengan Surat, <br>By <font color="red">Onetime#8401</p></font>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-2.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#verox1#0000" class="site-btn sb-light">Visit</a>
+						<p>Lomba Menggambar dengan Surat, <br>By <font color="red">Verox1#0000</p></font>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-3.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#imnoob#5424" class="site-btn sb-light">Visit</a>
+						<p>Lomba Menggambar dengan Surat, <br>By <font color="red">Imnoob#5424</p></font>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-4.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#daniimuts#0000" class="site-btn sb-light">Visit</a>
+						<p>Lomba Menggambar dengan Surat, <br>By <font color="red">Daniimuts#0000</p></font>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-5.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#adamjuz#9960" class="site-btn sb-light">Visit</a>
+						<p>Lomba Menggambar dengan Surat, <br>By <font color="red">Adamjuz#9960</p></font>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/lomba-gambar-6.png" alt="">
 					<div class="hover-links">
-						<a href="./events.html#angelmnzz#3256" class="site-btn sb-light">Visit</a>
+						<p>Lomba Menggambar dengan Surat, <br>By <font color="red">Angelmnzz#3256</p></font>
+					</div>>
+				</div>
+				<div class="gallery-item 17an">
+					<img src="img/lomba-gambar-7.png" alt="">
+					<div class="hover-links">
+						<p>Lomba Menggambar dengan Surat, <br>By <font color="red">Spieky#0000</p></font>
+					</div>
+				</div>
+				<div class="gallery-item 17an">
+					<img src="img/lomba-gambar-8.png" alt="">
+					<div class="hover-links">
+						<p>Lomba Menggambar dengan Surat, <br>By <font color="red">Yama#2676</p></font>
 					</div>
 				</div>
 			</div>
-
 		</div>
 		<!-- Page section end-->
 	</div>
