--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<li class="active"><a href="./index.html">Profil Miawu</a></li>
 					<li><a href="./gallery.html">Galeri</a></li>
 					<li><a href="./event-list.html">Daftar Acara</a></li>
-					<li><a href="./contact.html">Para Penguru</a></li>
+					<li><a href="./contact.html">Para Pengurus</a></li>
 				</ul>
 		</header>
 		<!-- header section end -->
