--- a/event-list.html
+++ b/event-list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Miawu - Events</title>
+	<title>Miawu - Acara</title>
 	<meta charset="UTF-8">
 	<meta name="keywords" content="html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
