--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Miawu - Gallery</title>
+	<title>Miawu - Galeri</title>
 	<meta charset="UTF-8">
 	<meta name="keywords" content="html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
