--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,7 @@
 					<li><a href="./event-list.html">Daftar Acara</a></li>
 					<li class="active"><a href="./contact.html">Para Pengurus</a></li>
 				</ul>
+			</div>
 		</header>
 		<!-- header section end -->
 
