--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
 		</div>
-        <div class="container"></div>
+        <div class="container">
             <div class="card">
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Brendod</h2>
@@ -180,5 +180,5 @@
 	<script src="js/circle-progress.min.js"></script>
 	<script src="js/main.js"></script>
 
-	</body>
+</body>
 </html>
