--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
 				</a>
 				<ul class="main-menu">
 					<li class="active"><a href="./index.html">Profil Miawu</a></li>
-					<li><a href="./gallery.html">Galeri</a></li>
-					<li><a href="./event-list.html">Daftar Acara</a></li>
-					<li><a href="./contact.html">Para Pengurus</a></li>
+					<li><a href="./galeri.html">Galeri</a></li>
+					<li><a href="./daftar-acara.html">Daftar Acara</a></li>
+					<li><a href="./daftar-pangkat.html">Daftar Pangkat</a></li>
+					<li><a href="./kontak.html">Para Pengurus</a></li>
 				</ul>
 		</header>
 		<!-- header section end -->
