fixed rank permissions

--- a/daftar-pangkat.html
+++ b/daftar-pangkat.html
@@ -63,55 +63,55 @@
         <div class="container">
             <div class="card">
               <div class="title title--1">Mantap xxx</div>
-              <div class="desc"><b>Pemimpin.</b><br>Mengubah Pesan Pembuka.<br>Mengubah Pangkat.<br>Mengubah Pangkat Anggota.<br>mengundang Anggota Baru.<br>Mengeluarkan Anggota.<br>Memaikan Musik.<br>mengubah peta Rumah Suku.<br>Membuat sebuah Peta (/np @kode).<br>Mengelola Form</div>
+              <div class="desc"><b>Pemimpin.</b><br>- Mengubah Pesan Pembuka.<br>- Mengubah Pangkat.<br>- Mengubah Pangkat Anggota.<br>- Mengundang Anggota Baru.<br>- Mengeluarkan Anggota.<br>- Memaikan Musik.<br>- Mengubah peta Rumah Suku.<br>- Membuat sebuah Peta (/np @kode).<br>- Mengelola Form</div>
             </div>
         </div>
         <div class="container">
             <div class="card">
               <div class="title title--2">Sayangku</div>
-              <div class="desc">Mengubah Pesan Pembuka.<br>Mengubah Pangkat.<br>Mengubah Pangkat Anggota.<br>mengundang Anggota Baru.<br>Mengeluarkan Anggota.<br>Memaikan Musik.<br>mengubah peta Rumah Suku.<br>Membuat sebuah Peta (/np @kode).<br>Mengelola Form</div>
+              <div class="desc">- Mengubah Pesan Pembuka.<br>- Mengubah Pangkat.<br>- Mengubah Pangkat Anggota.<br>- Mengundang Anggota Baru.<br>- Mengeluarkan Anggota.<br>- Memaikan Musik.<br>- Mengubah peta Rumah Suku.<br>- Membuat sebuah Peta (/np @kode).<br>- Mengelola Form</div>
             </div>
         </div>
         <div class="container">
             <div class="card">
               <div class="title title--3">Gay</div>
-              <div class="desc">Mengubah Pesan Pembuka.<br>&#10006; Mengubah Pangkat.<br>Mengubah Pangkat Anggota.<br>mengundang Anggota Baru.<br>&#10006; Mengeluarkan Anggota.<br>Memaikan Musik.<br>mengubah peta Rumah Suku.<br>Membuat sebuah Peta (/np @kode).<br>Mengelola Form</div>
+              <div class="desc">- Mengubah Pesan Pembuka.<br>- Mengubah Pangkat Anggota.<br>- Mengundang Anggota Baru.<br>- Memaikan Musik.<br>- Mengubah peta Rumah Suku.<br>- Membuat sebuah Peta (/np @kode).<br>- Mengelola Form</div>
             </div>
         </div>
         <div class="container">
             <div class="card">
               <div class="title title--3">Ccd</div>
-              <div class="desc">Mengubah Pesan Pembuka.<br>&#10006; Mengubah Pangkat.<br>&#10006; Mengubah Pangkat Anggota.<br>mengundang Anggota Baru.<br>&#10006; Mengeluarkan Anggota.<br>Memaikan Musik.<br>mengubah peta Rumah Suku.<br>Membuat sebuah Peta (/np @kode).<br>Mengelola Form</div>
+              <div class="desc">- Mengubah Pesan Pembuka.<br>- Mengundang Anggota Baru.<br>- Memaikan Musik.<br>- Mengubah peta Rumah Suku.<br>- Membuat sebuah Peta (/np @kode).<br>- Mengelola Form</div>
             </div>
         </div>
         <div class="container">
             <div class="card">
               <div class="title title--4">Mantapppp</div>
-              <div class="desc">&#10006; Mengubah Pesan Pembuka.<br>&#10006; Mengubah Pangkat.<br>&#10006; Mengubah Pangkat Anggota.<br>mengundang Anggota Baru.<br>&#10006; Mengeluarkan Anggota.<br>Memaikan Musik.<br>mengubah peta Rumah Suku.<br>Membuat sebuah Peta (/np @kode).<br>Mengelola Form</div>
+              <div class="desc">- Mengundang Anggota Baru.<br>- Memaikan Musik.<br>- Mengubah peta Rumah Suku.<br>- Membuat sebuah Peta (/np @kode).<br>- Mengelola Form</div>
             </div>
         </div>
         <div class="container">
             <div class="card">
               <div class="title title--4">Mantappp</div>
-              <div class="desc">&#10006; Mengubah Pesan Pembuka.<br>&#10006; Mengubah Pangkat.<br>&#10006; Mengubah Pangkat Anggota.<br>mengundang Anggota Baru.<br>&#10006; Mengeluarkan Anggota.<br>Memaikan Musik.<br>mengubah peta Rumah Suku.<br>Membuat sebuah Peta (/np @kode).<br>&#10006; Mengelola Form</div>
+              <div class="desc">- Mengundang Anggota Baru.<br>- Memaikan Musik.<br>- mengubah peta Rumah Suku.<br>- Membuat sebuah Peta (/np @kode).</div>
             </div>
         </div>
         <div class="container">
             <div class="card">
               <div class="title title--4">Mantapp</div>
-              <div class="desc">&#10006; Mengubah Pesan Pembuka.<br>&#10006; Mengubah Pangkat.<br>&#10006; Mengubah Pangkat Anggota.<br>mengundang Anggota Baru.<br>&#10006; Mengeluarkan Anggota.<br>Memaikan Musik.<br>&#10006; mengubah peta Rumah Suku.<br>Membuat sebuah Peta (/np @kode).<br>&#10006; Mengelola Form</div>
+              <div class="desc">- Mengundang Anggota Baru.<br>- Membuat sebuah Peta (/np @kode).</div>
             </div>
         </div>
         <div class="container">
             <div class="card">
               <div class="title title--4">Mantap</div>
-              <div class="desc">&#10006; Mengubah Pesan Pembuka.<br>&#10006; Mengubah Pangkat.<br>&#10006; Mengubah Pangkat Anggota.<br>&#10006; mengundang Anggota Baru.<br>&#10006; Mengeluarkan Anggota.<br>&#10006; Memaikan Musik.<br>&#10006; mengubah peta Rumah Suku.<br>Membuat sebuah Peta (/np @kode).<br>&#10006; Mengelola Form</div>
+              <div class="desc">- Membuat sebuah Peta (/np @kode).</div>
             </div>
         </div>
         <div class="container">
             <div class="card">
               <div class="title title--5">Gwd</div>
-              <div class="desc">&#10006; Mengubah Pesan Pembuka.<br>&#10006; Mengubah Pangkat.<br>&#10006; Mengubah Pangkat Anggota.<br>&#10006; mengundang Anggota Baru.<br>&#10006; Mengeluarkan Anggota.<br>&#10006; Memaikan Musik.<br>&#10006; mengubah peta Rumah Suku.<br>&#10006; Membuat sebuah Peta (/np @kode).<br>&#10006; Mengelola Form</div>
+              <div class="desc">- No One :(</div>
             </div>
         </div>
     <!---->
