--- a/info-acara.html
+++ b/info-acara.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Miawu</title>
+	<title>Miawu - Info Acara</title>
 	<meta charset="UTF-8">
 	<meta name="keywords" content="html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +8,8 @@
 	<link href="img/miawuk.png" rel="shortcut icon"/>
 
 	<!-- Google Font -->
-	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
-	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
+    <link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 
 	<!-- Stylesheets -->
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="css/animate.css"/>
 
 	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="css/style.css"/>
+	<link rel="stylesheet" href="css/infoacara.css"/>
 
 </head>
 <body>
@@ -49,39 +49,27 @@
 					<img src="img/miawu-removed.png" alt="Miawu">
 				</a>
 				<ul class="main-menu">
-					<li class="active"><a href="./index.html">Profil Miawu</a></li>
+					<li><a href="./index.html">Profil Miawu</a></li>
 					<li><a href="./galeri.html">Galeri</a></li>
-					<li><a href="./daftar-acara.html">Daftar Acara</a></li>
-					<li><a href="./info-acara.html">Info Acara</a></li>
+                    <li><a href="./daftar-acara.html">Daftar Acara</a></li>
+                    <li class="active"><a href="./info-acara.html">Info Acara</a></li>
 					<li><a href="./daftar-pangkat.html">Daftar Pangkat</a></li>
 					<li><a href="./kontak.html">Para Pengurus</a></li>
 				</ul>
+			</div>
 		</header>
 		<!-- header section end -->
 
-		<!-- Page section -->
-		<div class="page-section gallery-single-page">
-			<div class="gallery-single-warp">
-				<div class="row">
-					<a href="https://cheese.formice.com/transformice/tribe/1147896" target="_blank">
-						<img src="img/miawu-removed.png" alt="Miawu">
-					</a>
-					<div class="col-xl-6 p-0">
-						<div class="gallery-single-text">
-							<span>Miawu Profile Info</span>
-							<ul>
-								<li><span>Name</span>Miawu</li>
-								<li><span>ID</span>1147896</li>
-								<li><span>Region</span>Indonesia (ID/IDN)</li>
-								<li><span>Date</span>09/04/2020</li>
-								<li><span>Members</span>140</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- Page section end-->
+		<!-- Daftar Pangkat -->
+        <div id="first-event" class="container">
+            <div class="card">
+              <img width="200" height="200" src="https://cdn.discordapp.com/attachments/707427305701507092/746232805306007622/emot15tfm.png"/>
+              <div class="title title--1">First Event</div>
+              <div class="desc">10/06/20
+              <p>Event yang diselenggarakan pada tanggal 10 Juli 2020 ini merupakan event pertama yang diselenggarakan oleh Tribe Miawu. Tujuan dibuatnya event ini adalah untuk Meningkatkan kesadaran para Pemain TFM akan keberadaan Tribe Miawu, sekaligus bersilaturahmi. Di Event ini ada berbagai macam lomba, antara lain: Survivor, Tanya Jawab, Cover Lagu, Uno, dan Racing.</p></div><br>
+            </div>
+        </div>
+    <!---->
 	</div>
 
 	<!--====== Javascripts & Jquery ======-->
@@ -94,5 +82,5 @@
 	<script src="js/circle-progress.min.js"></script>
 	<script src="js/main.js"></script>
 
-	</body>
+</body>
 </html>
