--- a/kontak.html
+++ b/kontak.html
@@ -52,6 +52,7 @@
 					<li><a href="./index.html">Profil Miawu</a></li>
 					<li><a href="./galeri.html">Galeri</a></li>
 					<li><a href="./daftar-acara.html">Daftar Acara</a></li>
+					<li><a href="./info-acara.html">Info Acara</a></li>
 					<li><a href="./daftar-pangkat.html">Daftar Pangkat</a></li>
 					<li class="active"><a href="./kontak.html">Para Pengurus</a></li>
 				</ul>
@@ -64,7 +65,7 @@
             <div class="card">
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Miak</h2>
-              <div class="title title--owner">Tikus Sombong</div>
+              <!-- <div class="title title--owner">Tikus Sombong</div> -->
 			  <div class="desc">Cintamu, Senyaman Mentari Pagi...</div>
 			  <img src="img/mia.png"/>
                 <div class="actions">
@@ -78,7 +79,7 @@
             <div class="card">
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Brendod</h2>
-              <div class="title title--legendary">Tikus Xixixi</div>
+              <!-- <div class="title title--legendary">Tikus Xixixi</div> -->
 			  <div class="desc">ML Mantap.</div>
 			  <img src="img/brendod.png"/>
                 <div class="actions">
@@ -91,7 +92,7 @@
             <div class="card">
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Rwrw</h2>
-              <div class="title title--epic">Tikus Gembul</div>
+              <!-- <div class="title title--epic">Tikus Gembul</div> -->
 			  <div class="desc">Aku ndak suka ABR.</div>
 			  <img src="img/ruru.png"/>
                 <div class="actions">
@@ -105,7 +106,7 @@
             <div class="card">
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Minek</h2>
-              <div class="title title--epic">Tikus Kelainan</div>
+              <!-- <div class="title title--epic">Tikus Kelainan</div> -->
 			  <div class="desc">Sandi.</div>
 			  <img src="img/minek.png"/>
                 <div class="actions">
@@ -118,7 +119,7 @@
             <div class="card">
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Alice</h2>
-              <div class="title title--epic">Tikus Mantap</div>
+              <!-- <div class="title title--epic">Tikus Mantap</div> -->
 			  <div class="desc">Halo aku Alis dari gugus 20.</div>
 			  <img src="img/alice.png"/>
                 <div class="actions">
@@ -131,7 +132,7 @@
             <div class="card">
 			  <i class="fa fa-mars fa-2x" aria-hidden="true"></i>
               <h2>Aslam</h2>
-              <div class="title title--epic">Tikus Gabut ter-Mantap</div>
+              <!-- <div class="title title--epic">Tikus Gabut ter-Mantap</div> -->
 			  <div class="desc">Halo aku Aslam dari gugus 21.</div>
 			  <img src="img/aslam.png"/>
                 <div class="actions">
@@ -144,7 +145,7 @@
             <div class="card">
 			  <i class="fa fa-mars fa-2x" aria-hidden="true"></i>
               <h2>Wilson</h2>
-              <div class="title title--servicer">Tikus Wu</div>
+              <!-- <div class="title title--servicer">Tikus Wu</div> -->
               <div class="desc">我很好.</div>
 			  <img src="img/wilson.png"/>
                 <div class="actions">
@@ -158,7 +159,7 @@
             <div class="card">
 			  <i class="fa fa-mars fa-2x" aria-hidden="true"></i>
               <h2>Reighpuy</h2>
-              <div class="title title--servicer">Sarden</div>
+              <!-- <div class="title title--servicer">Sarden</div> -->
               <div class="desc">Hah?</div>
 			<img src="img/dapi.png"/>
                 <div class="actions">
