--- a/kontak.html
+++ b/kontak.html
@@ -52,7 +52,7 @@
 					<li><a href="./index.html">Profil Miawu</a></li>
 					<li><a href="./galeri.html">Galeri</a></li>
 					<li><a href="./daftar-acara.html">Daftar Acara</a></li>
-					<li><a href="./info-acara.html">Info Acara</a></li>
+					<!-- <li><a href="./info-acara.html">Info Acara</a></li> -->
 					<li><a href="./daftar-pangkat.html">Daftar Pangkat</a></li>
 					<li class="active"><a href="./kontak.html">Para Pengurus</a></li>
 				</ul>
